11/12/13 show pH value in combo box items
11/12/13 temporary pH meter (concentration meter)
11/12/13 fix computation of pH, fix assertions
11/12/13 revert dropper fluid change, we need to use opaque colors
11/12/13 make dropper fluid stop at the top of the solution in the beaker
11/12/13 fix algorithm for draining solution
11/12/13 fix 'Reset All'
11/12/13 add fluid animation to model
11/12/13 add dropper fluid to view
11/12/13 solute combo box
11/12/13 make Dropper the owner of the 'solute' property
11/12/13 add dropper to view
11/12/13 add faucets to view
11/12/13 remove PropertySet from model, more trouble than it was worth
11/12/13 add beaker to view
11/12/13 common.model types
11/8/13 move log10 to dot.Util
11/8/13 Solute, Solvent, Solution model elements
11/6/13 set up basic framework for 'Solutions' and 'Custom' screens
11/6/13 created repo